--- a/src/style.css
+++ b/src/style.css
@@ -1,79 +1,49 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+#app, body, html{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+:root{
+  --light-color: #f5f5f5;
+  --dark-color: #333;
+  --primary-color: #007bff;
+  --secondary-color: #6c757d;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
+@font-face {
+  font-family: "iconfont";
+  /* Project id 3629060 */
+  src: url('//at.alicdn.com/t/c/font_3629060_gxd7zuap35k.woff2?t=1711464150974') format('woff2'),
+    url('//at.alicdn.com/t/c/font_3629060_gxd7zuap35k.woff?t=1711464150974') format('woff'),
+    url('//at.alicdn.com/t/c/font_3629060_gxd7zuap35k.ttf?t=1711464150974') format('truetype');
+}
+
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 32px;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.icon-xinlangweibo:before {
+  content: "\e600";
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.icon-weixin:before {
+  content: "\e601";
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.icon-QQ:before {
+  content: "\e882";
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.icon-fangdajing:before {
+  content: "\e6e4";
 }
 
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.icon-kefu:before {
+  content: "\e88f";
 }
