--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 :root{
   --light-color: #f5f5f5;
   --dark-color: #333;
-  --primary-color: #007bff;
+  --primary-color: #e43b15;
   --secondary-color: #6c757d;
 }
 
